[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/girlExerciseSprite/popupExercise.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/girlExerciseSprite/backToGameButton.png" type="Texture" id=2]
[ext_resource path="res://Scripts/girlExercises.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "exerciseAnimation"
length = 5.4
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1, 1.6, 2.1, 2.2, 2.7, 3.2, 3.3, 3.8, 4.3, 4.4, 4.9, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, null, null, null, null, null, null, null, null, null, null, null, null, null, null ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "onAnimationFinished"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("exercisePopup2/blackBox:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="girlExerciseSample" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exerciseAnimator" type="AnimationPlayer" parent="."]
anims/exxerciseAnimation = SubResource( 1 )
anims/fadeAnimation = SubResource( 2 )

[node name="exercisePopup2" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.453
anchor_right = 0.5
anchor_bottom = 0.453
margin_left = -72.0
margin_top = -115.968
margin_right = 468.0
margin_bottom = 844.032
rect_scale = Vector2( 0.267, 0.267 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backToGameButton" type="Button" parent="exercisePopup2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -228.0
margin_right = 166.0
margin_bottom = -176.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonSprite" type="Sprite" parent="exercisePopup2/backToGameButton"]
position = Vector2( 161.586, 229.556 )
texture = ExtResource( 2 )

[node name="blackBox" type="Panel" parent="exercisePopup2"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="exercisePopup2/backToGameButton" to="." method="onBackToGameButtonPressed"]
